removed max height of cardContainer to avoid clipping

--- a/components/EventCard.module.css
+++ b/components/EventCard.module.css
@@ -1,5 +1,4 @@
 .cardContainer {
-  max-height: 500px;
   max-width: 500px;
   border-radius: 10px;
   margin: 0;
